# quick-cmake

./: CMakeLists.txt  Readme.md  StructureCreator.h  main.cpp
.github/workflows/: cmake-single-platform.yml
FileBuilder/: CMakeLists.txt
FileBuilder/include/FileBuilder/: FileBuilder.h  Strategy.h
FileBuilder/src/: FileBuilder.cpp
tests/: CMakeLists.txt  FileBuilderFixture.h  test_FileBuilder.cpp
